fix(flip): add overflow wrap

--- a/modules/services/minecraft/flip.mnzn.dev/main.css
+++ b/modules/services/minecraft/flip.mnzn.dev/main.css
@@ -22,6 +22,8 @@ body {
     font-weight: normal;
     font-style: normal;
 
+    overflow-wrap: break-word;
+
     background: var(--background-color);
     color: var(--text-color);
 }
